--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 Flask==2.1.3
 Flask-Reuploaded==1.2.0
 Flask-WTF==1.0.1
+gunicorn==20.1.0
 keras==2.9.0
 opencv-python==4.6.0.66
 python==3.9.12
-tensorflow==2.9.0
+tensorflow-cpu==2.9.1
 numpy==1.21.5
