--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,6 @@ Flask-WTF==1.0.1
 gunicorn==20.1.0
 keras==2.9.0
 opencv-python==4.6.0.66
-python==3.9.12
+python
 tensorflow-cpu==2.9.1
-numpy==1.21.5
+numpy
